# erl_tokenize

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: tokenize.rs
src/: char_reader.rs  error.rs  hidden_token.rs  lexer.rs  lexical_token.rs  lib.rs  misc.rs  position.rs  token.rs  tokenizer.rs  tokens.rs  types.rs  util.rs  values.rs
tests/: lib.rs
