[package]
name = "erl_tokenize"
version = "0.4.4"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Erlang source code tokenizer"
homepage = "https://github.com/sile/erl_tokenize"
repository = "https://github.com/sile/erl_tokenize"
readme = "README.md"
keywords = ["erlang", "tokenizer", "lexer"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
coveralls = {repository = "sile/erl_tokenize"}

[dependencies]
num = "0.4"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
structopt = "0.3"