[package]
name = "erl_tokenize"
version = "0.8.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Erlang source code tokenizer"
homepage = "https://github.com/sile/erl_tokenize"
repository = "https://github.com/sile/erl_tokenize"
readme = "README.md"
keywords = ["erlang", "tokenizer", "lexer"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive", "rc"] }

[dev-dependencies]
orfail = "1"
clap = { version = "4", features = ["derive"] }
