[package]
name = "erl_tokenize"
version = "0.9.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Erlang source code tokenizer"
homepage = "https://github.com/sile/erl_tokenize"
repository = "https://github.com/sile/erl_tokenize"
readme = "README.md"
keywords = ["erlang", "tokenizer", "lexer"]
categories = ["parser-implementations"]
license = "MIT OR Apache-2.0"
edition = "2024"

[features]
default = []
serde = ["num-bigint/serde", "dep:serde"]

[dependencies]
num-bigint = { version = "0.4" }
serde = { version = "1", features = ["derive", "rc"], optional = true }

[dev-dependencies]
noargs = "0.4.1"
